Refactor GridPaths: replace int[] with State class for pathfinding, add cost calculations, and enhance DFS/BFS methods